# VkRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _clang-format  init-subrepositories.bat  init-subrepositories.sh  xmake.lua
include/VkRenderer/: CommandBuffer.hpp  CommandBuffer.inl  Framebuffer.hpp  Image.hpp  ImageView.hpp  Mandelbulb.hpp  Material.hpp  RenderPass.hpp  RenderWindow.hpp  Renderer.hpp  VulkanDevice.hpp  VulkanDevice.inl
include_TO_DELETE/VkRenderer/: CommandBuffer.hpp  Framebuffer.hpp  ImageView.hpp  RenderPass.hpp  VulkanDevice.hpp  VulkanDevice.inl
resources/: vert.spv
src/: shader.frag  shader.vert
src/TextureLoaderFrontend/: CMakeLists.txt  TextureLoaderFrontend.cpp  TextureLoaderFrontend.hpp
src/VkRenderer/: BrdfLut.cpp  BrdfLut.hpp  BrdfLutGenerator.cpp  BrdfLutGenerator.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandBuffer.inl  CommandBufferPool.cpp  CommandBufferPool.hpp  CommandPool.cpp  CommandPool.hpp  Cubemap.cpp  Cubemap.hpp  DebugBox.cpp  DebugBox.hpp  DepthTexture.cpp  DepthTexture.hpp  EquirectangularToCubemap.cpp  EquirectangularToCubemap.hpp  EquirectangularToIrradianceMap.cpp  EquirectangularToIrradianceMap.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  ImageFactory.cpp  ImageFactory.hpp  ImageView.cpp  ImageView.hpp  IrradianceMap.cpp  IrradianceMap.hpp  LightTransport.cpp  LightTransport.hpp  LightTransportBuffers.cpp  LightTransportDescriptorsObjects.cpp  (+67 more)
src/VkRenderer/Materials/: CustomMaterial.cpp  CustomMaterial.hpp  DefaultMaterial.cpp  DefaultMaterial.hpp
test/LightTransport/: LightTransport.cpp  LightTransportBuffers.cpp  LightTransportDescriptorsObjects.cpp  LightTransportFramebuffers.cpp  LightTransportRenderPasses.cpp  LightTransportShaderModules.cpp  LightTransportUpdateDescriptorSets.cpp
test/Mandelbulb/: Mandelbulb.cpp  Mandelbulb.hpp
test/ShaderBall/: ShaderBall.cpp  ShaderBall.hpp
test/SpatialPartitionning/: SpatialPartitionning.cpp  SpatialPartitionning.hpp  kd_tree.hpp  octree.hpp
test/main_test/: main.cpp
